--- a/views/dealerview.phtml
+++ b/views/dealerview.phtml
@@ -51,7 +51,7 @@ if(isset($_SESSION['iduser']))
             if($username != "" and $profile == 1)
             {
                 ?>
-                <a class="navbar-brand" href="#">&nbsp;USERS </a>|
+                <a class="navbar-brand" href="index.php?operation=gotousers">&nbsp;USERS </a>|
                 <?php
             }
         }
